tests/ui/shape_macros/where_unknown_field.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/shape_macros/where_unknown_field.rs:5:1
  |
5 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown field `nonexistent_field` on model `User`
 --> tests/ui/shape_macros/where_unknown_field.rs:9:9
  |
9 |         nonexistent_field: "x",
  |         ^^^^^^^^^^^^^^^^^
